# autouploadbot

./: .env.example  .gitignore  README.md  bot.py  downloader.py  main.py  pyproject.toml  requirements.txt  server.py  subscribe.py  telegram.py  temp.html  xml_parser.py
tests/: locustfile.py
